--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -2145,7 +2145,7 @@
                 // comment next line if you use skin with no border - styleUI : 'fontAwesomeNoBorder'
                 // $this.closest('.ui-jqgrid-view').find('tr').find('th:visible:last').css({'border-right': '0'});
 
-                $this.closest('.ui-jqgrid-view').find('tr:visible:last').find('td').css({'border-bottom': '0'}); //ana
+                // $this.closest('.ui-jqgrid-view').find('tr:visible:last').find('td').css({'border-bottom': '0'}); 
                 
                 $this.find('.treeclick').on('click', function () {
                     $this.find('tr').find('td:visible:last').css({'border-right': '0'});
